reverted iframe changes as caused XSS errors

--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -16,7 +16,7 @@ After finnishing it, I realised that the project had potential but to do anythin
 To see what a small industrial articulated robot arm can do and their level of precision, checkout this:
 </p>
   
-<iframe src="https://youtube.com/embed/Gx5be7_J2xc?start=68&mute=1&rel=0&modestbranding=1&showinfo=0&color=white"></iframe>
+<iframe width="1260" height="720" src="https://youtube.com/embed/Gx5be7_J2xc?start=68&mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
   
 <p>
 Anyway, after wasting some time watching these things on youtube, I realised that one of the key design points was the motors used. As before, I had decided to use servos but the small TowerPro mg90s weren't going to cut it as they have plastic gears and hardly any torque. So I came across this website called <a href="https://servodatabase.com/">the servo database</a> where you can sort a huge variety of servos based on torque, weight etc. Eventually, I decided that I would use the mg996r servos. They have 9.6kg/cm torque and are metal geared so they would be perfect for my application. So knowing that they would take a while to arrive, I ordered 4 for £13 off ebay. In the meantime, I began the design of the arm...
@@ -59,7 +59,7 @@ Now I had a good way of controlling the motion of it, I could hardcode some set 
 Here is a short video of one of its first attempts at setting up just the pawns.
 </p>
 
-<iframe width="1280" height="720" src="https://youtube.com/embed/fg_MQyArOEE?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1260" height="720" src="https://youtube.com/embed/fg_MQyArOEE?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
 
 <p>
 Baring in mind that I had to manually control the arm to each position working out where everything should go, this wasn't too bad an effort. But I knew that if I had to do this for all the other pieces and improve the current motor angles for the pawns, that this would take a while.
@@ -73,10 +73,10 @@ So in an effort to speed up the process, I put the project on hold and created a
 This was the finnished result:
 </p>
 
-<iframe width="1280" height="720" src="https://youtube.com/embed/vo8GCk6Cwmo?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1260" height="720" src="https://youtube.com/embed/vo8GCk6Cwmo?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
 
 <p>
 Finally I had an easy way of setting the arm in differnt positions so I got to work neatening the pawns and making the positions for the back line pieces. Unfortunately though, I accounted a new error - my robot had Parkinson's disease. At a distance, the weight of the arm meant the second from the bottom (number 4) motor got into a PID control loop and began oscilating. As a result, picking up pieces at a reach like the queen and the king proved difficult and the arm had poor repeatability at that distance. Anyway, I continued on and this was the final result. Not perfect but the best it could achieve.
 </p>
 
-<iframe width="1280" height="720" src="https://youtube.com/embed/X1Q76hO2ZM4?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="1260" height="720" src="https://youtube.com/embed/X1Q76hO2ZM4?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
